# WeatherAggregator

./: .gitignore  za uraditi.txt
Aggregator-Service/weather-aggregator-aggregator-service-app/: Cargo.toml  Dockerfile.prod
Aggregator-Service/weather-aggregator-aggregator-service-app/resources/tls/: weather-aggregator-aggregator-service-app.crt
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/: unibl.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/: etf.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/: configuration.rs  main.rs  services.rs  startup.rs  strategy.rs  telemetry.rs  util.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/configuration/: settings.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/controllers/: current_weather_controller.rs  errors.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/middlewares/: json_500_middleware.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/model/: errors.rs  requests.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/services/: current_weather_cache_service.rs  current_weather_service.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/strategy/: average_strategy.rs  composite_strategy.rs  priority_strategy.rs  weather_strategy.rs
Aggregator-Service/weather-aggregator-aggregator-service-app/src/org/unibl/etf/util/: deserializers.rs  serializers.rs
Cache-Service/weather-aggregator-cache-service-app/: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod
Cache-Service/weather-aggregator-cache-service-app/resources/tls/: weather-aggregator-cache-service-app.crt
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/: etf.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/: configuration.rs  main.rs  model.rs  repositories.rs  startup.rs  telemetry.rs  util.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/configuration/: settings.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/controllers/: current_weather_controller.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/external_dependency_systems/: redis_store.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/handlers/: query_error_handler.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/model/: errors.rs  requests.rs  responses.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/repositories/: current_weather_cache_repository.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/services/: cache_service.rs
Cache-Service/weather-aggregator-cache-service-app/src/org/unibl/etf/util/: deserializers.rs  serializers.rs
External-API-Adapter-Service/wa-eaa-app/: Cargo.toml  Dockerfile.dev
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/: etf.rs
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/etf/: configuration.rs  controllers.rs  main.rs  model.rs  services.rs  startup.rs
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/etf/configuration/: settings.rs
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/etf/controllers/: current_weather_controller.rs  errors.rs  openweather_api_controller.rs  weather_api_controller.rs
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/etf/middlewares/: error_handler_middleware.rs
External-API-Adapter-Service/wa-eaa-app/src/org/unibl/etf/model/: errors.rs  requests.rs  (+1 more)
Geocoding-Service/weather-aggregator-geocoding-service-app/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
Geocoding-Service/weather-aggregator-geocoding-service-app/resources/tls/: weather-aggregator-geocoding-service-app.crt
Geocoding-Service/weather-aggregator-geocoding-service-app/src/org/unibl/: etf.rs
Geocoding-Service/weather-aggregator-geocoding-service-app/src/org/unibl/etf/: configuration.rs  controllers.rs  main.rs  model.rs  repositories.rs  services.rs  startup.rs  telemetry.rs
User-Preferences-Service/weather-aggregator-user-preferences-service-app/: Cargo.toml  Dockerfile.prod
User-Preferences-Service/weather-aggregator-user-preferences-service-app/.sqlx/: query-2325be053b9d1c8af9ba49accc63cd5771e7b259e02613f39a6b4f11be52ef06.json  query-2df0d32b1d9c5a8d6bd15ea50bcc81dc01b4f1ee58428b139a6dbaec1f4a2682.json  query-757fd3546451aecba25d91d0eda13d88df89c8739ade4697ed1a70377ac2ba44.json  query-80112b6b4d51d544ac0d93d1a82dda8efcc3828134edf338c9c4e388bd0ff35d.json  query-ca675309401cb16f9895ff9f49b406bd9c34926d48e99ef68cceedb909bea092.json  query-db16e769ba6c24e172947aa913c4057d237a479505edeac9ddecdd99feff08c3.json  query-ddc1137c35ee97db7db14a5dffe0a00568de3b81ebf53ae365706217337f35ac.json
User-Preferences-Service/weather-aggregator-user-preferences-service-app/resources/tls/: weather-aggregator-user-preferences-service-app.crt
User-Preferences-Service/weather-aggregator-user-preferences-service-app/src/org/unibl/: etf.rs
User-Preferences-Service/weather-aggregator-user-preferences-service-app/src/org/unibl/etf/: controllers.rs  jwt.rs  main.rs  middlewares.rs  model.rs  repositories.rs  services.rs  startup.rs
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/.cargo/: config.toml
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/resources/tls/: weather-aggregator-weather-api-adapter-service-app.crt
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/src/: org.rs
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/src/org/unibl/: etf.rs
Weather-API-Adapter-Service/weather-aggregator-weather-api-adapter-service-app/src/org/unibl/etf/: controllers.rs  handlers.rs  main.rs  startup.rs  telemetry.rs
(+294 files in other folders)
