[package]
name = "weather-aggregator-aggregator-service-app"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Erić <oliver.eric500@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/org/unibl/etf/main.rs"
name = "weather-aggregator-aggregator-service-app"

[dependencies]
actix-web = { version = "4.12.1" }
actix-web-validator = { version = "7.0.0"}
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version =  "0.12.26", features = ["json"]}
serde-aux = { version = "4.7.0" }
config = {version = "0.15.19"}
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.140"
validator =  { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"