[package]
name = "weather-aggregator-aggregator-service-app"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Erić <oliver.eric500@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/org/unibl/etf/main.rs"
name = "weather-aggregator-aggregator-service-app"

[dependencies]
actix-web = { version = "4.12.1" }
actix-web-validator = { version = "7.0.0"}
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version =  "0.12.26", features = ["json"]}
serde-aux = { version = "4.7.0" }
config = {version = "0.15.19"}
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.140"
validator =  { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"
tracing = { version = "0.1.41", features = ["log"]}
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tonic", "grpc-tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_trace_batch_span_processor_with_async_runtime"] }
actix-web-opentelemetry = { version = "0.22"}
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }
async-trait = "0.1.89"
http = "1.4.0"
