[package]
name = "weather-aggregator-geocoding-service-app"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Erić <oliver.eric500@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/org/unibl/etf/main.rs"
name = "weather-aggregator-geocoding-service-app"

[dependencies]
actix-web = { version = "4.12.1" }
actix-web-validator = { version = "7.0.0"}
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = { version = "4.7.0" }
config = {version = "0.15.19"}
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.140"
reqwest = { version = "0.13.0-rc.1", features = ["query"] }