[package]
name = "weather-aggregator-user-preferences-service-app"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Erić <oliver.eric500@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/org/unibl/etf/main.rs"
name = "weather-aggregator-user-preferences-service-app"


[dependencies]
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
rustls = "0.23.28"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = { version = "4.7.0" }
tracing = { version = "0.1.41", features = ["log"]}
config = {version = "0.15.19"}
chrono = {version = "0.4.42", features = ["serde"]}
secrecy = {version = "0.10.3", features = ["serde"]}
opentelemetry-otlp = { version = "0.30.0", features = ["tonic", "grpc-tonic", "tls-roots"] }
rustls-pemfile = "2.2.0"
futures-util = "0.3.31"
actix-web-validator = { version = "7.0.0"}
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_30"] }
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_trace_batch_span_processor_with_async_runtime"] }

tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto", "use_pem"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tokio = "1.49.0"
lapin = { version = "3.2.1", features = ["rustls"] }
validator =  { version = "0.20.0", features = ["derive"] }
urlencoding = "2.1.3"
thiserror = "1.0.69"
rand = "0.9.2"

serde_json = "1.0.140"
async-trait = "0.1.89"
futures = "0.3.31"


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "bigdecimal",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]